# narrate.ink

./: .dockerignore  .env.example  .gitignore  .replit  DOCUMENTATION.md  Dockerfile  README.md  clone-app.sh  docker-build.sh  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  pyproject.toml  replit.md  start.sh
.github/workflows/: docker-publish.yml  gitea-docker-build.yml
.idea.example/: workspace.xml
attached_assets/: Pasted--0-00-32-0-00-00-iB-s-100-361k-361k-00-00-00-00-1-61MiB_1773092555695.txt  Pasted--RUN-pip-install-no-cache-dir-r-requirements-txt-Collec_1773176803838.txt  Pasted--characters-Shane-Hollander-Ilya-Shane-s-mother-mention_1769366101761.txt  Pasted-Absolutely-here-is-a-clean-Replit-friendly-documentatio_1769579851268.txt  Pasted-Error-Chatterbox-Paid-generation-failed-Chatterbox-API-_1769465410767.txt  voice-metadata-system-prompt.md  voice-metadata-user-prompt.md
backend/: add_tracecall.py  audio_export.py  audio_processor.py  chatterbox_config.py  database.py  epub_parser.py  export_runner.py  job_manager.py  job_runner.py  main.py  models.py  narrate_ink_logger.py  nohup.out  project_segmenter.py  remote_tts_client.py  requirements.txt  text_parser.py  tts_service.py  upload_manager.py  validation_runner.py
client/: index.html
docs/: 00-self-hosting-setup.md  04-voices.md  05-audio-generation.md  08-emotion-prosody.md  09-settings.md  tts-api-contract.md
scripts/: fresh_db.sh
server/: auth.ts  index.ts  llm-service.ts  logger.ts  python-backend.ts  routes.ts  storage.ts  vite.ts
shared/: schema.ts
(+60 files in other folders)
