[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=2.4.1",
    "pydantic>=2.12.5",
    "pyrubberband>=0.4.0",
    "python-multipart>=0.0.22",
    "scipy>=1.17.0",
    "soundfile>=0.13.1",
    "textblob>=0.19.0",
    "uvicorn>=0.40.0",
]
